--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.1.0",
+    "@prismicio/next": "^1.3.2",
+    "@prismicio/react": "^2.7.1",
     "next": "13.4.6",
+    "nextjs-progressbar": "^0.0.16",
     "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@slicemachine/adapter-next": "^0.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "slice-machine-ui": "^1.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
