--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prismicio/client": "^7.1.0",
+    "@prismicio/helpers": "^2.3.9",
     "@prismicio/next": "^1.3.2",
     "@prismicio/react": "^2.7.1",
     "next": "13.4.6",
@@ -20,10 +21,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.1",
+    "@slicemachine/adapter-next": "^0.3.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "slice-machine-ui": "^1.3.0",
+    "slice-machine-ui": "^1.5.1",
     "tailwindcss": "^3.3.2"
   }
 }
