--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nextjs-progressbar": "^0.0.16",
     "preline": "^1.9.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yet-another-react-lightbox": "^3.12.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.9",
