--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.4.2",
     "yet-another-react-lightbox": "^3.12.0"
   },
   "devDependencies": {
